Completed the project
Write JS code and some CSS

--- a/catalog-item.html
+++ b/catalog-item.html
@@ -95,7 +95,7 @@
             </div>
             <p class="footer-copyright">
                 <b>Разработано:</b>
-                <a class="button" href="Мой сайт">RSKAMSHILOV</a>
+                <a class="button" href="Мой сайт">HTMLACADEMY</a>
             </p>
         </div>
     </footer>
@@ -124,5 +124,8 @@
 		</form>
 		<button class="modal-close" type="button">Закрыть</button>
 	</section>
+    <div class="modal-overlay"></div>
+    <script src="js/popup.js"></script>
+    <script src="js/map.js"></script>
 </body>
 </html>
