--- a/catalog.html
+++ b/catalog.html
@@ -231,7 +231,7 @@
             </div>
             <p class="footer-copyright">
                 <b>Разработано:</b>
-                <a class="button" href="Мой сайт">RSKAMSHILOV</a>
+                <a class="button" href="Мой сайт">HTMLACADEMY</a>
             </p>
         </div>
     </footer>
@@ -260,5 +260,8 @@
         </form>
         <button class="modal-close" type="button">Закрыть</button>
     </section>
+    <div class="modal-overlay"></div>
+    <script src="js/popup.js"></script>
+    <script src="js/map.js"></script>
 </body>
 </html>
